media/css/base.css
body {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 0.95em;
  margin-top: 0;
  text-align: center;
}

a {
  color: #4183C4;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

#content, #header, #footer {
  margin: 0 auto;
  overflow: hidden;
  text-align: left;
  width: 1000px;
}

#header {
  margin-bottom: 0.8em;
}

#home {
  float: left;
}

#home h2 {
  margin-bottom: 0;
}

#account-nav {
  float: right;
  font-size: 0.8em;
  padding: 0.3em;
}

#message-box {
  clear: both;
}

.messages {
  list-style-type: none;
  padding-left: 0;
}

.messages .single {
  -moz-border-radius: 8px;
  border-radius: 8px;
  background-color: #FFF1A8;
  padding: 0.2em 0.8em;
}

.messages .error {
  color: red;
}

.messages .warning {
  color: #FFD700;
}

.messages .success {
  color: green;
}

/** Overwrite the jquery ui autocomplete css **/
ul.ui-autocomplete {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 0.95em;
  text-align: left;
}

.link {
  color: #4183C4;
  cursor: pointer;
}

#search-bar {
  float: left;
  margin-left: 3em;
  margin-top: 2em;
}

#search-bar form {
  margin-bottom: 0;
}

.actions {
  border-top: 1px solid black;
  margin-top: 1.5em;
  padding-top: 1em;
}

.actions .update-button {
  float: right;
}

